# ApplyPilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.example  EVIDENCE.md  README.md  TODO.md  apply  changes.md  init  opencode.json  package-lock.json  package.json  profile.example.json  profile_with_validation.example.json  pyproject.toml  resume.json.example  run  start
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: validation_framework.md
scripts/: demo_backends.py  gmail_oauth.py  test_opencode_apply.py
src/applypilot/: __init__.py  bootstrap.py  cli.py  config.py  database.py  jsonresume_schema.py  llm.py  llm_provider.py  logging_config.py  pipeline.py  profile.py  resume_builder.py  resume_ingest.py  resume_json.py  resume_render.py  runtime_config.py  salary.py  url_safety.py  view.py
src/applypilot/db/: dto.py  (+4 more)
tests/: conftest.py  test_adjacency_and_gates.py  test_adjacency_builder.py  test_agent_validator.py  test_analytics_events.py  test_analytics_models.py  test_apply_acquire_job.py  test_artifact_naming.py  test_assembler_empty_sections.py  test_auto_apply_agents.py  test_backend_selection.py  test_bullet_normalization.py  test_chrome_profile.py  test_chunked_pipeline.py  test_classifier.py  test_cli_apply_batch.py  test_cli_logging.py  test_cli_resume_json.py  test_cli_run_limit.py  test_code_filler.py  test_cost_tracking.py  test_cover_letter_batching.py  test_database.py  test_db_repos.py  test_decomposer_assembler.py  test_deterministic_scoring.py  test_discovery_bugfixes.py  test_exclusion_gate.py  test_execution_mode.py  test_extension_server.py  test_geo_filters.py  test_hackernews.py  test_hybrid_bridge.py  test_innovation_features.py  test_llm_cache.py  test_llm_call_logger.py  test_llm_cascade.py  test_llm_client.py  test_llm_provider.py  test_llm_resolution.py  (+41 more)
tests/discovery/: test_greenhouse.py  test_jobspy.py  test_workday.py
tests/integration/: test_backends_integration.py  test_comprehensive_engine.py  test_discovery_live.py  test_single_job_pipeline.py
(+364 files in other folders)
